--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tsconfig/node24": "24.0.1",
     "@types/koa-bodyparser": "4.3.12",
     "@types/koa-router": "7.4.8",
+    "@types/koa-static-server": "1.5.3",
     "@types/node": "24.1.0",
     "tsup": "8.5.0",
     "tsx": "4.20.3",
@@ -30,6 +31,7 @@
     "koa": "3.0.1",
     "koa-bodyparser": "4.4.1",
     "koa-router": "13.1.1",
+    "koa-static-server": "1.5.2",
     "lowdb": "7.0.1",
     "valibot": "1.1.0",
     "yamljs": "0.3.0"
